<resources>
    <string name="app_name">开源中国</string>
    <string name="main_tab_name_news">综合</string>
    <string name="main_tab_name_tweet">动弹</string>
    <string name="main_tab_name_quick">快速</string>
    <string name="main_tab_name_question">问答</string>
    <string name="main_tab_name_my">我的</string>
    <string name="main_tab_name_explore">发现</string>
    <string name="event_status_end">活动结束</string>
    <string name="event_status_ing">正在报名</string>
    <string name="event_status_sing_up">截止报名</string>
    <string name="event_type_osc">源创会</string>
    <string name="event_type_tec">技术交流</string>
    <string name="event_type_other">其他</string>
    <string name="event_type_outside">站外活动</string>
    <string name="event_apply_status_un_sign">我要报名</string>
    <string name="event_apply_status_audit">审核中</string>
    <string name="event_apply_status_confirmed">已确认</string>
    <string name="event_apply_status_presented">已出席</string>
    <string name="event_apply_status_canceled">已取消</string>
    <string name="event_apply_status_refused">已拒绝</string>
    <string name="event_is_fav">已收藏</string>
    <string name="event_un_fav">收藏</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，小屁孩耍脾气啦。<br/>我们会帮你教训一下这个小屁孩！</string>
    <string name="submit_report">打报告去</string>
    <string name="menu_rss">订阅</string>
    <string name="menu_opensoft">开源软件</string>
    <string name="menu_blog">博客区</string>
    <string name="menu_quests">技术问答</string>
    <string name="menu_setting">设置</string>
    <string name="menu_theme">夜间</string>
    <string name="quick_option_text">文字</string>
    <string name="quick_option_album">相册</string>
    <string name="quick_option_photo">拍照</string>
    <string name="quick_option_voice">语音</string>
    <string name="quick_option_note">便签</string>
    <string name="quick_option_scan">扫一扫</string>
    <string name="quick_option_find">找人</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="unlogin">未登录，请先登录</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="my_information_unlogin_tips">未登录</string>
    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_illegal_email">请输入正确的email地址</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="actionbar_title_news">资讯详情</string>
    <string name="actionbar_title_blog">博客详情</string>
    <string name="actionbar_title_software">软件详情</string>
    <string name="actionbar_title_question">帖子详情</string>
    <string name="actionbar_title_tweet">动弹详情</string>
    <string name="actionbar_title_event_detail">活动详情</string>
    <string name="actionbar_title_event_location">活动地址</string>
    <string name="actionbar_title_detail">详情</string>
    <string name="actionbar_title_active">好友圈</string>
    <string name="actionbar_title_mes">消息中心</string>
    <string name="actionbar_title_message_detail">对话</string>
    <string name="friend_home">查看对方资料</string>
    <string name="share_to">分享到</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_copy_link">复制链接</string>
    <string name="platform_more_option">更多</string>
    <string name="platform_sina">微博</string>
    <string name="platform_wechat">微信</string>
    <string name="platform_weichat_circle">朋友圈</string>
    <string name="share_title">开源中国分享</string>
    <string name="share_title_news">开源中国资讯分享</string>
    <string name="share_title_blog">开源中国博客分享</string>
    <string name="share_title_soft">开源中国软件分享</string>
    <string name="share_title_post">开源中国帖子分享</string>
    <string name="tip_start_share">开始分享…</string>
    <string name="tip_share_done">分享完成</string>
    <string name="detail_menu_unfavorite">取消收藏</string>
    <string name="detail_menu_favorite">收藏</string>
    <string name="detail_menu_for_share">分享</string>
    <string name="detail_menu_for_report">举报</string>
    <string name="add_favorite_success">收藏成功</string>
    <string name="add_favorite_faile">收藏失败</string>
    <string name="del_favorite_success">已取消收藏</string>
    <string name="del_favorite_faile">取消收藏失败</string>
    <string name="actionbar_title_question_tag">%s相关</string>
    <string name="comment_count">评论(%s)</string>
    <string name="comment_empty">暂无评论</string>
    <string name="answer_count">回复(%s)</string>
    <string name="post_answer">回复</string>
    <string name="comment_reply_count">---共有%s条回复---</string>
    <string name="comment_refer_author">引用来自%s的评论</string>
    <string name="tip_comment_content_empty">评论内容不能为空</string>
    <string name="comment_blog">发布评论</string>
    <string name="comment_pub">发表评论</string>
    <string name="comment_publishing">正在发布你的评论…</string>
    <string name="comment_publish_success">评论成功</string>
    <string name="comment_publish_faile">评论失败</string>
    <string name="progress_submit">正在提交…</string>
    <string name="tweet_public">发布动弹</string>
    <string name="tweet_hint">今天你动弹了吗？</string>
    <string name="tweet_publish_title">发布动弹</string>
    <string name="tweet_publishing">正在发布动弹…</string>
    <string name="tweet_publishing_toast">正在发布动弹, 请留意通知栏。</string>
    <string name="tweet_publish_continue">正在重新发布动弹…</string>
    <string name="tweet_publish_success">动弹发布成功~</string>
    <string name="tweet_publish_failed">动弹发布失败, 点击重新发送!</string>
    <string name="tweet_image_wait">准备图片中…</string>
    <string name="tweet_image_wait_failed">图片转存失败!</string>
    <string name="tweet_image_publishing" formatted="false">发布图片中…%s</string>
    <string name="tweet_image_publish_failed" formatted="false">发布图片失败-[%s/%s]</string>
    <string name="tweet_publish_faile">发布动弹失败</string>
    <string name="tweet_play_faile">动弹播放失败</string>
    <string name="tweet_audio_faile">语音动弹发布失败</string>
    <string name="tweet_detail_data_null">啊噢, 没有找到该动弹~ 可能被主人删除了呢!</string>
    <string name="cancle_record">取消录音</string>
    <string name="record_sound_notfound">找不到录音</string>
    <string name="record_sound_short">时间太短了</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="clean_cache_mes">是否清空缓存?</string>
    <string name="draft_tweet_message">是否保存为草稿?</string>
    <string name="clearwords">是否清空内容?</string>
    <string name="choose_picture">选择图片</string>
    <string name="tip_content_empty">内容不能为空</string>
    <string name="tip_content_too_long">内容太长</string>
    <string name="actionbar_title_softwarelist">开源软件</string>
    <string name="actionbar_title_comment">评论列表</string>
    <string name="actionbar_title_questions">技术问答</string>
    <string name="actionbar_title_tweetpub">弹一弹</string>
    <string name="actionbar_title_softtweet">软件动弹列表</string>
    <string name="actionbar_title_user_center">用户中心</string>
    <string name="actionbar_title_user_blog">用户博客列表</string>
    <string name="actionbar_title_user_favorite">用户收藏</string>
    <string name="actionbar_title_my_information">我的资料</string>
    <string name="actionbar_title_setting">设置</string>
    <string name="actionbar_title_setting_notification">新消息提醒</string>
    <string name="actionbar_title_about_osc">关于开源中国</string>
    <string name="actionbar_title_note">便签</string>
    <string name="actionbar_title_noteedit">编辑便签</string>
    <string name="actionbar_title_shake">摇一摇</string>
    <string name="actionbar_title_search">搜索</string>
    <string name="actionbar_title_event">我的活动</string>
    <string name="actionbar_title_my_event">我的活动</string>
    <string name="actionbar_title_event_apply">活动出席人员</string>
    <string name="actionbar_title_same_city">同城</string>
    <string name="blog_list_title_heat">最热</string>
    <string name="blog_list_title_normal">最近</string>
    <string name="actionbar_title_blog_area">博客区</string>
    <string name="private_message">私信</string>
    <string name="follow_user">关注</string>
    <string name="unfollow_user">取消关注</string>
    <string name="follow_each_other">取消互粉</string>
    <string name="latest_login_time">最近登录  %s</string>
    <string name="actionbar_title_profile">个人中心</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="join_time">加入于 :</string>
    <string name="location">所在地区:</string>
    <string name="development_platform">开发平台:</string>
    <string name="academic_focus">专长领域:</string>
    <string name="from_web">网页</string>
    <string name="from_mobile">手机</string>
    <string name="from_android">Android</string>
    <string name="from_iphone">iPhone</string>
    <string name="from_windows_phone">Windows Phone</string>
    <string name="from_wechat">微信</string>
    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>
    <string name="actionbar_title_qr_scan">二维码/条码</string>
    <string name="send_message_to">发送私信给:</string>
    <string name="hint_user_name">对方昵称</string>
    <string name="hint_message">私信内容</string>
    <string name="tip_message_public_success">发送成功</string>
    <string name="tip_message_public_faile">发送失败</string>
    <string name="send_to">发给</string>
    <string name="message_count">%s条私信</string>
    <string name="confirm_delete_message">确定要删除和\"%s\"的所有私信吗?</string>
    <string name="confirm_delete_one_message">确定要删除这条私信吗?</string>
    <string name="tip_delete_success">删除成功</string>
    <string name="tip_delete_faile">无法删除</string>
    <string name="copy">复制</string>
    <string name="repost">转发</string>
    <string name="delete">删除</string>
    <string name="copy_success">复制成功</string>
    <string name="deleting">正在删除…</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_faile">删除失败</string>
    <string name="message_delete_tweet">是否删除该动弹?</string>
    <string name="software_author">软件作者 :</string>
    <string name="software_license">开源协议 :</string>
    <string name="software_language">开发语言 :</string>
    <string name="software_os">操作系统 :</string>
    <string name="software_recordtime">收录时间 :</string>
    <string name="software_index">软件首页</string>
    <string name="software_download">软件下载</string>
    <string name="software_document">软件文档</string>
    <string name="footer_type_loading">正在加载中…</string>
    <string name="footer_type_error">加载失败</string>
    <string name="loading_img">加载图片</string>
    <string name="mes_notice">消息通知</string>
    <string name="clean_cache">清理缓存</string>
    <string name="double_click_exit">双击退出</string>
    <string name="loading_more">自动加载\"更多\"</string>
    <string name="about" translatable="false">关于我们</string>
    <string name="exit">退出</string>
    <string name="login_input_username_hint">手机号或邮箱</string>
    <string name="login_hold_hint">记住密码</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label">邮箱用户找回密码，请<b style="color:#fff">点击这里</b></string>
</resources>