<?xml version="1.0" encoding="utf-8"?>
<net.oschina.app.widget.CustomerScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_loading_img"
            style="@style/option_item_rl"
            android:layout_marginTop="20dip" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/loading_img"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_16" />

            <net.oschina.app.widget.togglebutton.ToggleButton
                android:id="@+id/tb_loading_img"
                style="@style/option_item_toggleButton"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_marginRight="@dimen/space_8"
            android:background="@color/list_divider_color" />

        <RelativeLayout
            android:id="@+id/rl_notification_settings"
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/mes_notice"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_marginRight="@dimen/space_8"
            android:background="@color/list_divider_color" />

        <RelativeLayout
            android:id="@+id/rl_clean_cache"
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/clean_cache"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/tv_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/main_gray"
                android:textSize="@dimen/text_size_14" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_marginRight="@dimen/space_8"
            android:background="@color/list_divider_color" />

        <RelativeLayout
            android:id="@+id/rl_double_click_exit"
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/double_click_exit"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_16" />

            <net.oschina.app.widget.togglebutton.ToggleButton
                android:id="@+id/tb_double_click_exit"
                style="@style/option_item_toggleButton"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_loading_more"
            style="@style/option_item_rl"
            android:visibility="gone" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/loading_more"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_16" />

            <net.oschina.app.widget.togglebutton.ToggleButton
                android:id="@+id/tb_loading_more"
                style="@style/option_item_toggleButton"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_about"
            style="@style/option_item_rl"
            android:layout_marginTop="20dip" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/about"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/space_8"
            android:layout_marginRight="@dimen/space_8"
            android:background="@color/list_divider_color" />

        <RelativeLayout
            android:id="@+id/rl_exit"
            style="@style/option_item_rl" >

            <TextView
                android:id="@+id/setting_logout"
                style="@style/option_item_text_parent"
                android:text="@string/exit"
                android:textColor="@color/main_black"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>
    </LinearLayout>

</net.oschina.app.widget.CustomerScrollView>