<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_bg_item_selector"
        android:clickable="true"
        android:padding="@dimen/space_16">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_4"
            android:text="@string/join_time"
            android:textColor="?attr/infoTextColor"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_join_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_bg_item_selector"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/space_16">

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_4"
            android:text="@string/location"
            android:textColor="?attr/infoTextColor"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_bg_item_selector"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/space_16">

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_4"
            android:text="@string/development_platform"
            android:textColor="?attr/infoTextColor"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_development_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_bg_item_selector"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="@dimen/space_16">

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_4"
            android:text="@string/academic_focus"
            android:textColor="?attr/infoTextColor"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_academic_focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

</LinearLayout>