<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/darker_gray"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include
        android:id="@+id/ly_retrieve_bar"
        layout="@layout/activity_main_login_navigation_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_login_input"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_retrieve_tel_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/actionbar_search_icon"
            tools:ignore="RtlHardcoded"/>

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/login_line_color"/>

        <EditText
            android:id="@+id/et_retrieve_tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_input_username_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColorHint="@color/login_line_color"/>

        <ImageView
            android:id="@+id/iv_retrieve_tel_del"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/actionbar_search_icon"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_input"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_retrieve_code_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/actionbar_search_icon"/>

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:background="@color/login_line_color"/>

        <EditText
            android:id="@+id/et_retrieve_code_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_input_username_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColorHint="@color/login_line_color"/>

        <TextView
            android:id="@+id/retrieve_sms_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_register_call_sms"
            android:gravity="center_vertical"
            android:paddingBottom="2dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="2dp"
            android:text="@string/register_sms_hint"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_retrieve_submit"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_login_submit"
        android:text="@string/retrieve_pwd_step_hint"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_retrieve_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/retrieve_pwd_email_label"
        android:textColor="@color/white"/>

</LinearLayout>